--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.1.0",
+    "@angular/cdk": "^16.1.4",
     "@angular/common": "~16.1.0",
     "@angular/compiler": "~16.1.0",
     "@angular/core": "~16.1.0",
@@ -49,7 +50,7 @@
     "jest-preset-angular": "~13.1.0",
     "nx": "16.5.0",
     "nx-cloud": "latest",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
