--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Bump version and publish
         run: |
           npm version
+          git push
       - uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
