--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           default_author: github_actions
           committer_email: actions@github.com
+          push: true
       - name: Bump version and publish
         run: |
           npm version patch
