--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -10,9 +10,10 @@ jobs:
       - uses: actions/setup-node@v2
       - uses: EndBug/add-and-commit@v9
         with:
-          default_author: github_actions
+          message: Show GitHub Actions logo
+          committer_name: GitHub Actions
           committer_email: actions@github.com
           push: true
       - name: Bump version and publish
         run: |
-          npm version patch
+          npm version patch --no-git-tag-version
