--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -1,6 +1,7 @@
 name: Publish Packages
 on:
   workflow_dispatch:
+permissions: read-all|write-all
 jobs:
   publish_packages:
     runs-on: ubuntu-latest
